# genai_pricing

./: .gitignore  LICENSE  README.md  example.py  genai_pricing.py  pyproject.toml
.github/workflows/: coverage.yml  lint-type.yml  python-package.yml
test/: genai_pricing_test.py
